<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">1376382475937382</string>
    <string name="app_name">LikeGraph</string>
    <string name="action_settings">Settings</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="create_graph">Create Graph</string>
    <string name="rank_friends">Rank Friends</string>
    <string name="search_friends">Search Friends</string>
    <string name="generate">Generate Graph</string>
    <string name="statuses">Statuses</string>
    <string name="links">Links</string>
    <string name="checkins">Check-ins</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="include">Include:</string>
    <string name="settings">Settings</string>
    <string name="bars">Number of Bars</string>
    <string name="bar_colours">Bar Colour</string>
    <string name="bars_preference_summary">Set the number of viewable bars</string>
    <string name="bar_colours_preference_summary">Set the colour of the bars</string>
    <string name="show_all_bars">Show all bars</string>
    <string name="exclude_zero_photos_summary">Exclude photos with no likes</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="no_ranks">No friend ranks to show</string>
    <string name="no_friends">No friends to show</string>
    <string name="no_statuses">No statuses liked</string>
    <string name="ok">OK</string>
    <string name="image">image</string>
    <string name="search_hint">Name</string>
    <string name="profile">Profile</string>

</resources>