<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:title="@string/settings" >
    
    <ListPreference
        android:key="graph_bar_colour"
        android:title="@string/bar_colours"
        android:summary="@string/bar_colours_preference_summary"
        android:entries="@array/graph_bar_colours"
        android:entryValues="@array/graph_bar_colours"
        android:defaultValue="Blue" />
    
    <CheckBoxPreference
        android:key="graph_all_bars"
        android:disableDependentsState="true"
        android:title="@string/show_all_bars"
		android:defaultValue="false" />
    
    <ListPreference
        android:key="graph_number_bars"
        android:dependency="graph_all_bars"
        android:title="@string/bars"
        android:summary="@string/bars_preference_summary"
        android:entries="@array/graph_bars"
        android:entryValues="@array/graph_bars"
        android:defaultValue="50" />
    
    <CheckBoxPreference
        android:key="exclude_zero_photos"
        android:title="@string/exclude_zero_photos_summary"
        android:defaultValue="true" />
    
</PreferenceScreen>